B&L QA/objects/Survey_Score__c.object
<CustomObject>
    <description>Capture NPS Willingness to Recommend survey responses</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey Scores</relationshipLabel>
        <relationshipName>Survey_Scores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CS_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This will be populated automatically for you</inlineHelpText>
        <label>CS Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Survey_Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_ID__c</fullName>
        <label>Call ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_System_Id__c</fullName>
        <description>[Call_ID]-[Q#]</description>
        <externalId>true</externalId>
        <inlineHelpText>[Call_ID]-[Question]</inlineHelpText>
        <label>Legacy System Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opt_Out_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Survey Scores to indicate that a customer does not want to participate in the survey</description>
        <label>Opt Out Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Survey Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Indicator__c</fullName>
        <formula>IF(((Today() - Survey_Date__c) &lt; 60), IMAGE( &apos;/resource/RedLight&apos;, &apos;Red&apos;,30,30) , IMAGE( &apos;/resource/GreenLight&apos;, &apos;Green&apos;,30,30) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Question__c</fullName>
        <label>Survey Question</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>On a scale of 0-10,  how likely are you to recommend Bausch + Lomb to a friend or colleague ?</fullName>
                </value>
                <value>
                    <fullName>Q1-CS Performance</fullName>
                </value>
                <value>
                    <fullName>Q2-Easy to do business with</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Reason__c</fullName>
        <label>Customer Feedback</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Score__c</fullName>
        <label>Survey Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Source__c</fullName>
        <label>Survey Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CF Phone Survey</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                    <default>true</default>
                    <label>Manual</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Survey Score</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Survey Score Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Scores</pluralLabel>
    <recordTypes>
        <fullName>EMEA_Survey_Record</fullName>
        <active>true</active>
        <label>EMEA Survey Record</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Prevent_Edit_of_Integrated_Surveys</fullName>
        <active>true</active>
        <description>Prevents CS users from editing surveys integrated from Verint</description>
        <errorConditionFormula>AND( $RecordType.Name  == &quot;EMEA Survey Record&quot; , $User.Alias &lt;&gt; &quot;dinte&quot; ,  CreatedBy.Alias == &quot;dinte&quot; )</errorConditionFormula>
        <errorMessage>You may not edit a record that has come from the CF Phone Survey software.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Survey_Source_Must_be_Manual_if_CS</fullName>
        <active>true</active>
        <description>Ensures the survey source is set to manual if record is not being entered by data integration</description>
        <errorConditionFormula>IF( AND(  $User.Alias &lt;&gt; &quot;dinte&quot;, $RecordType.Name == &quot;EMEA Survey Record&quot;, NOT(ISPICKVAL(Survey_Source__c,&quot;Manual&quot;) ) ), True, False)</errorConditionFormula>
        <errorDisplayField>Survey_Source__c</errorDisplayField>
        <errorMessage>Survey Source must be set to &quot;Manual&quot; for user entered records.</errorMessage>
    </validationRules>
</CustomObject>